--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -30,7 +30,7 @@ APP_HOST=0.0.0.0
 # TOP_K="2"
 
 # The system prompt for the AI model.
-SYSTEM_PROMPT=You are a helpful assistant who helps users with their questions.
+SYSTEM_PROMPT="You are a chatbot, able to have normal interactions, as well as talk"
 
 # An additional system prompt to add citation when responding to user questions.
 SYSTEM_CITATION_PROMPT='You have provided information from a knowledge base that has been passed to you in nodes of information.
