--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ fastapi = "^0.115.0"
 cachetools = "^5.5.0"
 llama-index-embeddings-ollama = "^0.3.1"
 python-dotenv = "^1.0.1"
+aiostream = "^0.6.2"
 
 
 [build-system]
