--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.scripts]
 generate = "app.engine.generate:generate_datasource"
+chat-cli = "cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -17,6 +18,8 @@ cachetools = "^5.5.0"
 llama-index-embeddings-ollama = "^0.3.1"
 python-dotenv = "^1.0.1"
 aiostream = "^0.6.2"
+httpx = "^0.27.2"
+typer = "^0.12.5"
 
 
 [build-system]
